# djquickstart

./: db.sqlite3  pyproject.toml
djangoproject/: settings.py  urls.py
sqldjango/: apps.py  models.py  urls.py  views.py
sqldjango/migrations/: 0001_initial.py
